--- a/Artist web/Home.html
+++ b/Artist web/Home.html
@@ -2,7 +2,8 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Home Page</title>
     <link rel="icon" href="images/circle.png">
     <link rel="stylesheet" href="StyleSheet2.css" />
