--- a/Artist web/Home.html
+++ b/Artist web/Home.html
@@ -53,7 +53,9 @@
         <img src="images/circle.png" class="small4" />
         <img src="images/square.png" class="small5" />
 
-
+        <footer>
+            Developed and designed by Omar Khaled - 2020
+        </footer>
     </div>
   
 
